--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test:coverage": "vitest run --coverage",
+    "test": "vitest"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -14,10 +16,15 @@
     "react-router-dom": "^6.8.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "@vitest/coverage-c8": "^0.28.2",
+    "jsdom": "^21.1.0",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vitest": "^0.28.2"
   }
 }
